--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,27 @@
+# Distribution / packaging
+.Python
+env/
+build/
+develop-eggs/
+dist/
+downloads/
+eggs/
+.eggs/
+lib/
+lib64/
+parts/
+sdist/
+var/
+*.egg-info/
+.installed.cfg
+*.egg
+
+# custom - data
+*.parquet
+*.gzip
 *.csv
+
+## custom - data
+*.ipynb
+.ipynb_checkpoints/
+notebooks/
